[package]
name = "pub_chem_download"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
log4rs = "1.0.0"
rayon = "1.5.1"

structopt = "0.3"

reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
# tokio = { version = "1", features = ["full"] }
once_cell = "1.8.0"
chrono = "0.4.19"
# serde_derive = "1.0.127"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1.5"
csv = "1.1"

# jwalk = "0.6"


[dependencies.mongodb]
version = "1.2.3"
default-features = false
features = ["sync"]
